--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <body>
         <div id="root">
             <nav id="main-nav" class="sidebar">
+                <h1>url router</h1>
                 <a href="/" onclick="route()">Home</a>
                 <a href="/about" onclick="route()">About</a>
                 <a href="/lorem" onclick="route()">Lorem</a>
+                <br>
+                <h1>hash router</h1>
+                <a href="/" onclick="route()">Home</a>
+                <a href="#about" onclick="hashroute()">About</a>
+                <a href="#lorem" onclick="hashroute()">Lorem</a>
             </nav>
             <div id="main-page"></div>
         </div>
 
         <script src="js/router.js"></script>
+        <script src="js/hash-router.js"></script>
     </body>
 </html>
